Added link to script from index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>jelford @ github</title>
+    </head>
+    <body>
+        <p>I don't keep much here yet. Maybe you're looking for my userscripts?</p>
+        <ul><li>h/greasemonkey-scripts/onion-image-load.user.js</li></ul>
+    </body>
+</html>
