--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>I don't keep much here yet. Maybe you're looking for my userscripts?</p>
-        <ul><li>h/greasemonkey-scripts/onion-image-load.user.js</li></ul>
+zsh:1: command not found: :q
     </body>
 </html>
