--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>I don't keep much here yet. Maybe you're looking for my userscripts?</p>
-zsh:1: command not found: :q
+        <ul><li><a href="/greasemonkey-scripts/onion-image-load.user.js" title="Load images on The Onion when you have JS turned off">onion-image-load.user.js</a></li></ul>
     </body>
 </html>
