Added link to spool

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
             <p>I don't keep much here right now. Here are some things:</p>
             <ul>
                 <li class="link-item">
-                    <img class="favicon" src="http://wiki.greasespot.net/favicon.ico">
+                    <img class="favicon" src="http://wiki.greasespot.net/favicon.ico" />
+                    <a href="https://github.com/jelford/spool" title="Speed-read the web">spool</a>
+                    <span class="link-desc">Speed-read web-pages</span>
+                </li>
+                <li class="link-item">
+                    <img class="favicon" src="http://wiki.greasespot.net/favicon.ico" />
                     <a href="https://github.com/jelford/greasemonkey-scripts/raw/master/onion-image-load.user.js" title="Load images on The Onion when you have JS turned off">onion-image-load.user.js</a>
                     <span class="link-desc">Load images on <a href="http://theonion.com">The Onion</a> when users have JavaScript disabled (e.g. with <a href="http://noscript.net">NoScript</a>)</span>
                 </li>
                 <li class="link-item">
-                    <img class="favicon" src="http://www.vagrantup.com/images/footer_vagrant_logo-576717c1.png">
+                    <img class="favicon" src="http://www.vagrantup.com/images/footer_vagrant_logo-576717c1.png" />
                     <a href="https://github.com/jelford/erlang-box" title="Set up a VM with a fresh install of Erlang from the latest source">erlang vagrant box</a>
                     <span class="link-desc">Prepare a fresh Ubuntu VM and build Erlang from the latest sources</span>
                 </li>
