Made spool on index link to a sub-page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <p>I don't keep much here right now. Here are some things:</p>
             <ul>
                 <li class="link-item">
-                    <img class="favicon" src="http://wiki.greasespot.net/favicon.ico" />
-                    <a href="https://github.com/jelford/spool" title="Speed-read the web">spool</a>
+                    <a href="spool" title="Speed-read the web">spool</a>
                     <span class="link-desc">Speed-read web-pages</span>
                 </li>
                 <li class="link-item">
