added chest into the list of project

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <p>I don't keep much here right now. Here are some things:</p>
             <ul>
                 <li class="link-item">
+                    <a href="chest" title="Store and chart arbitrary data series">chest</a>
+                    <span class="link-desc">Store and chart arbitrary data series</span>
+                </li>
+                <li class="link-item">
                     <a href="spool" title="Speed-read the web">spool</a>
                     <span class="link-desc">Speed-read web-pages</span>
                 </li>
