Added a description for chest

--- a/spool/index.html
+++ b/spool/index.html
@@ -7,7 +7,7 @@
         <script src="https://raw.githubusercontent.com/jelford/spool/master/spool.js"></script>
     </head>
     <body>
-        <h1><a href="/">jelford</a> -&gt; spool</h1>
+        <h1><a href="../index.html">jelford</a> -&gt; spool</h1>
         <div>
             <p><span class="codeword">spool</span> a JavaScript component and accompanying UserScript to let your users speed-read web-pages. The quickest way to try it out is to click on the description below.</p>
         </div>
