--- a/chest/index.html
+++ b/chest/index.html
@@ -37,10 +37,17 @@ python -m chest.start
                 <pre>
 >>> from requests import post
 >>> from json import dumps
+>>> post('http://server_address:5805/series_name', data=dumps({'value': 4}))
 >>> post('http://server_address:5805/series_name', data=dumps({'value': 5}))
+>>> post('http://server_address:5805/series_name', data=dumps({'value': 6}))
                 </pre>
             </code>
-            <p>Browse to <code>http://server_address:5805/series_name/chart</code> to see the posted data in a chart</p>
+            <p>Browse to <code>http://server_address:5805/series_name/chart?plot_y=value</code> to see the posted data in a chart, with <code>value</code> on the y-axis</p>
         </section>
+
+        <!-- fork me on github -->
+       <a href="https://github.com/jelford/chest"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a> 
+
+
     </body>
 </html> 
