Update pre-commit hook to use find for adding html files to git

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <h2 id="online">Online</h2>
 <ul>
 <li><a href="https://github.com/jelford">GitHub</a></li>
+<li><a href="/blog.html">Blog</a></li>
 <li><a href="https://uk.linkedin.com/in/jelford">LinkedIn</a></li>
 <li><a href="http://stackoverflow.com/users/227224/jelford">StackOverflow</a></li>
 </ul>
