--- a/blog.html
+++ b/blog.html
@@ -49,4 +49,11 @@ $(blog_outputs) : $(blog_sources)
 <li>ordering the posts by some sort of date</li>
 <li>making the page load dynamically, so you don't just get everything on there as a one-er each time</li>
 </ul>
+<h2 id="building-a-better-blog-organising-output">Building a better blog: organising output</h2>
+<p>In the last entry, I walked through using a simple make-file to generate the HTML for a simple blog - it will convert a collection of markdown files into HTML snippets, then concatenate them into a single &quot;blog&quot; page.</p>
+<p>In this entry, we'll build on that by managing multiple entries more in a nicer way:</p>
+<ul>
+<li>we'll make it put them into some sort of order (based on when they were written)</li>
+<li>we'll style the resulting page to make it easier to see where one entry stops and the next one starts</li>
+</ul>
 </body></html>
