--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link href="data:text/css,body%20%7B%0A%20%20%20%20font%2Dfamily%3A%20sans%2Dserif%3B%0A%7D%0A%0A%0A" rel="stylesheet">
+  <link href="data:text/css,body%20%7B%0A%20%20%20%20font%2Dfamily%3A%20sans%2Dserif%3B%0A%7D%0A%0Asection%2Eblog%5Fpost%20%7B%0A%09border%2Dtop%3A%201px%20solid%20grey%3B%0A%7D%0A%0A" rel="stylesheet">
 </head>
 <body>
 <h1 id="jelford">jelford</h1>
